force-app/main/default/objects/B2B_Question__c/B2B_Question__c.object-meta.xml
<CustomObject>
    <label>B2B Question</label>
    <nameField>
        <displayFormat>Q-{0000000}</displayFormat>
        <label>B2B Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>