force-app/main/default/objects/B2B_Question__c/fields/B2B_Language__c.field-meta.xml
<CustomField>
    <fullName>B2B_Language__c</fullName>
    <description>This field holds the language of the question and answer expected.</description>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>de</fullName>
                <label>German</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>