force-app/main/default/objects/B2B_Question__c/fields/B2B_Question__c.field-meta.xml
<CustomField>
    <fullName>B2B_Question__c</fullName>
    <description>This field holds the question text which needs to be asked.</description>
    <inlineHelpText>This field holds the question text which needs to be asked.</inlineHelpText>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>