force-app/main/default/objects/B2B_Question__c/fields/B2B_Survey_Question__c.field-meta.xml
<CustomField>
    <fullName>B2B_Survey_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field holds the reference that to which Survey Question record does this current question belong to</description>
    <inlineHelpText>This field holds the language of the question and answer expected.</inlineHelpText>
    <label>Survey Question</label>
    <referenceTo>B2B_Survey_Question__c</referenceTo>
    <relationshipLabel>B2B Questions</relationshipLabel>
    <relationshipName>B2B_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>