force-app/main/default/objects/B2B_Question__c/fields/B2B_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Type__c</fullName>
    <description>This field holds the expected type of answer for the question asked.</description>
    <inlineHelpText>This field holds the expected type of answer for the question asked.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Options</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>